# xiaoexpansion

./: .gitignore  .gitmodules  .hgignore  CITATION.cff  LICENSE  README.md  notes  platformio.ini  tryit.txt
agents/: chatgpt.md  claude.md  codex.md  cursor.md  gemini.md
doexpansion/: AGENTS.md  CMakeLists.txt  README.md  build_out.txt  build_out2.txt  build_out3.txt  build_out4.txt  build_out5.txt  build_out6.txt  build_verbose.txt  claude.md  doit  doit.gps  gemini.md  notes  path.txt  platformio.ini  upload_out.txt
doexpansion/src/: airquality.cpp  chkdisp.cpp  drivegps.cpp  drivemany.cpp  playsong.cpp  rtc_seeed.cpp  testi2c.cpp  testsd.cpp  testserial.cpp  xiaoesp32c3.h  xiaoesp32s3.h  xiaonrf52.h  xiaorp2040.h  xiaorp2350.h  xiaosamd.h
doexpansion/tools/: dosine.py  main.py
libs/: buzzsong.py
micropython/: Makefile  README.md  boot.py  doexpansion.py  doplotwork.gp  esp32c3adc.md  expansion.py  expansionzephyr.py  notes  querystdin.py  readv.py  results.csv  xiaoesp32.py  xiaoesp32c3.py  xiaonrf.py  xiaorp2.py  xiaosamd.py  xiaozephyr.py
micropython/libs/: alltime.py  alltime_nrf.py  buzzrainbow.py  pcfsimp.py  rjsxiao.py
rust/xiaosamd/: Cargo.toml  doall  notes
rust/xiaosamd/examples/: blink.rs  eic.rs  i2c_adc.rs  sercom_interrupt.rs  shared_i2c.rs  shared_i2c_rtc.rs  shared_i2cnew.rs  shared_str.rs  ssd1306_i2c.rs  usb_adc.rs  usb_echo.rs  usb_serial.rs
rust/xiaosamd/src/: lib.rs
src/: chkdisp.cpp  drivemany.cpp  playsong.h
tools/: dosine.py
